# community-integrations

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASES.md  quicktype.sh  release.sh
example-dagster-pipes-rust-project/: pyproject.toml  setup.cfg  setup.py
example-dagster-pipes-rust-project/example_dagster_pipes_rust_project/: definitions.py
example-dagster-pipes-rust-project/example_dagster_pipes_rust_project_tests/: test_subprocess.py
example-dagster-pipes-rust-project/rust_processing_jobs/: Cargo.toml
example-dagster-pipes-rust-project/rust_processing_jobs/src/: main.rs
libraries/_template/: README.md  pyproject.toml
libraries/_template/example_integration/: __init__.py
libraries/_template/example_integration_tests/: test_example_integration.py
libraries/dagster-anthropic/: Makefile  README.md  pyproject.toml
libraries/dagster-anthropic/dagster_anthropic/: __init__.py  resource.py
libraries/dagster-anthropic/dagster_anthropic_tests/: test_resource.py  test_version.py
libraries/dagster-apprise/: CHANGELOG.md  README.md  pyproject.toml
libraries/dagster-apprise/dagster_apprise/: __init__.py  _utils.py  components.py  hooks.py  resource.py
libraries/dagster-apprise/dagster_apprise_tests/: test_component_sensor.py  test_comprehensive_urls.py  test_edge_cases.py  test_hooks.py  test_resource.py  test_utils.py
libraries/dagster-async-executor/: CHANGELOG.md  README.md  pyproject.toml
libraries/dagster-async-executor/dagster_async_executor/: __init__.py  executor.py  executor_definition.py
libraries/dagster-async-executor/dagster_async_executor_tests/: conftest.py  test_assets.py  test_async_executor_performance.py  test_basic.py  test_compute.py  test_compute_generator.py  test_concurrency_limit.py  test_dynamic_async_executor.py  test_execute_step.py  test_graph_shapes_async_executor.py  test_hooks.py  test_nested_graph.py  test_reexecution_async_executor.py
libraries/dagster-chroma/: README.md  pyproject.toml
libraries/dagster-chroma/dagster_chroma/: __init__.py  config.py  resource.py
libraries/dagster-chroma/dagster_chroma_tests/: test_resource.py  test_version.py
libraries/dagster-contrib-anthropic/: README.md  pyproject.toml
libraries/dagster-contrib-anthropic/dagster_contrib_anthropic/: __init__.py  resource.py
libraries/dagster-contrib-anthropic/dagster_contrib_anthropic_tests/: test_resource.py
libraries/dagster-contrib-chroma/: README.md  pyproject.toml
libraries/dagster-contrib-chroma/dagster_contrib_chroma/: __init__.py  config.py  resource.py
libraries/dagster-contrib-chroma/dagster_contrib_chroma_tests/: test_resource.py
libraries/dagster-contrib-gcp/: CHANGELOG.md  README.md  pyproject.toml
libraries/dagster-contrib-gcp/dagster_contrib_gcp/: __init__.py
libraries/dagster-contrib-gcp/dagster_contrib_gcp_tests/: test_version.py
libraries/dagster-contrib-gemini/: README.md  pyproject.toml
libraries/dagster-contrib-gemini/dagster_contrib_gemini/: __init__.py  resource.py
libraries/dagster-contrib-gemini/dagster_contrib_gemini_tests/: test_resource.py
libraries/dagster-contrib-notdiamond/: CHANGELOG.md  Makefile  README.md  pyproject.toml
libraries/dagster-contrib-notdiamond/dagster_contrib_notdiamond/: __init__.py  resources.py
libraries/dagster-contrib-notdiamond/dagster_contrib_notdiamond_tests/: test_resources.py
libraries/dagster-contrib-notdiamond/example_job/: example_notdiamond.py
libraries/dagster-contrib-notdiamond/examples/: example_book_reviews_summary.py  example_notdiamond.py
libraries/dagster-contrib-weaviate/: README.md  pyproject.toml
libraries/dagster-contrib-weaviate/dagster_contrib_weaviate/: __init__.py  resource.py
libraries/dagster-contrib-weaviate/dagster_contrib_weaviate_tests/: test_resource.py
libraries/dagster-dataform/: README.md  pyproject.toml
libraries/dagster-dataform/dagster_dataform/: __init__.py  dataform_orchestration_schedule.py  dataform_polling_sensor.py  resources.py  utils.py
libraries/dagster-dataform/dagster_dataform_tests/: conftest.py  test_dataform_orchestration_schedule.py  test_dataform_polling_sensor.py  test_resources.py  test_utils.py
libraries/dagster-ducklake/: Makefile  README.md  pyproject.toml
libraries/dagster-ducklake/dagster_ducklake/: __init__.py  duckdb_file.py  duckdb_protocol.py  ducklake.py
libraries/dagster-ducklake/dagster_ducklake_tests/: test_ducklake.py
libraries/dagster-evidence/: README.md  pyproject.toml
libraries/dagster-evidence/dagster_evidence/: __init__.py  resource.py
libraries/dagster-evidence/dagster_evidence_tests/: test_evidence_resource.py  test_version.py
libraries/dagster-gemini/: README.md  pyproject.toml
libraries/dagster-gemini/dagster_gemini/: __init__.py  resource.py
libraries/dagster-gemini/dagster_gemini_tests/: test_resource.py  test_version.py
libraries/dagster-hex/: CHANGELOG.md  Makefile  README.md  pyproject.toml
libraries/dagster-hex/dagster_hex/: __init__.py  assets.py  resources.py  types.py
libraries/dagster-hex/dagster_hex_tests/: test_hex.py  test_version.py
libraries/dagster-hightouch/: README.md  pyproject.toml
libraries/dagster-iceberg/: .gitignore  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  test_pyiceberg_basics.py  test_pyiceberg_postgres.py
libraries/dagster-iceberg/docs/: development.md  (+6 more)
libraries/dagster-modal/: CHANGELOG.md  Makefile  README.md  pyproject.toml
libraries/dagster-notdiamond/: CHANGELOG.md  README.md  pyproject.toml
libraries/dagster-obstore/: Makefile  README.md  docker-compose.yml  pyproject.toml
libraries/dagster-polars/: CHANGELOG.md  MANIFEST.in  pyproject.toml  setup.cfg
libraries/dagster-qdrant/: Makefile  README.md  pyproject.toml
libraries/dagster-salesforce/: CHANGELOG.md  README.md  pyproject.toml
libraries/dagster-sdf/: .gitignore  pyproject.toml
libraries/dagster-sftp/: CHANGELOG.md  README.md  pyproject.toml
libraries/dagster-sharepoint/: CHANGELOG.md  README.md  pyproject.toml
libraries/dagster-teradata/: Makefile  README.md  pyproject.toml
(+545 files in other folders)
