[package]
name = "dagster_pipes_rust"
version = "0.1.6"
edition = "2021"
description = "A Dagster pipes implementation for interfacing with Rust"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0"
flate2 = "1"

[dev-dependencies]
tempfile = "3.14.0"
