[project]
name = "example-integration"
description = "<insert description here>"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dagster>=1.8.0",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "pyright>=1.1.386",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["example_integration"]

[tool.setuptools.dynamic]
version = {attr = "example_integration.__version__"}
