[project]
name = "dagster-anthropic"
description = "Dagster integration with Anthropic"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.8.0",
    "anthropic>=0.42.0",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "pyright>=1.1.386",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_anthropic"]

[tool.setuptools.dynamic]
version = {attr = "dagster_anthropic.__version__"}
