[project]
name = "dagster_contrib_gcp"
version = "0.0.3"
description = "Community contributed Google Cloud Platform integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.9.0",
    "google-cloud-run>=0.10.10",
    "tenacity>=8.0.0"
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "pyright>=1.1.386",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {exclude= ['dagster_contrib_gcp_tests*']}
