[project]
name = "dagster-contrib-gcp"
description = "Community contributed Google Cloud Platform integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.9.0",
    "google-cloud-run>=0.10.10",
    "google-cloud-secret-manager>=2.23.1",
    "tenacity>=8.0.0",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "pyright>=1.1.386",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {exclude= ['dagster_contrib_gcp_tests*']}

[tool.setuptools.dynamic]
version = {attr = "dagster_contrib_gcp.__version__"}
