[project]
name = "dagster_contrib_gemini"
version = "0.0.1"
description = "Dagster integration with Gemini"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.8.0",
    "google-generativeai>=0.8.3",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "pyright>=1.1.386",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_contrib_gemini"]
