[project]
name = "dagster-contrib-notdiamond"
version = "0.1.2"
description = "Dagster integration with Not Diamond"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.8.0",
    "notdiamond",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "dagster-webserver",
    "pyright>=1.1.386",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_contrib_notdiamond"]
