[project]
name = "dagster_contrib_weaviate"
version = "0.0.1"
description = "Dagster integration with Weaviate"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.8.0",
    "weaviate-client>=4.10.2",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "pyright>=1.1.386",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_contrib_weaviate"]
