[project]
name = "dagster-gemini"
description = "Dagster integration with Gemini"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.8.0",
    "google-generativeai>=0.8.3",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "pyright>=1.1.386",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_gemini"]

[tool.setuptools.dynamic]
version = {attr = "dagster_gemini.__version__"}
