[project]
name = "dagster-hex"
version = "0.1.2"
description = "Dagster integration with Hex"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dagster>=1.3",
    "dagit",
    "requests>=2",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "types-requests",
    "pytest-mock",
    "requests-mock",
    "pyright>=1.1.386",
    "ruff>=0.7.2",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_hex"]
