[project]
name = "dagster-hex"
version = "0.1.4"
description = "Dagster integration with Hex"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.3",
    "requests>=2",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-mock",
    "pyright",
    "requests-mock",
    "ruff",
    "types-requests",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_hex"]
