[project]
name = "dagster-hex"
description = "Dagster integration with Hex"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.3",
    "requests>=2",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-mock",
    "pyright",
    "requests-mock",
    "ruff",
    "types-requests",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_hex"]

[tool.setuptools.dynamic]
version = {attr = "dagster_hex.__version__"}
