[project]
name = "dagster-hightouch"
version = "0.1.5"
description = "Dagster library for Hightouch"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dagster>=0.14",
    "requests>=2.0",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.386",
    "ruff>=0.7.2",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_hightouch"]
