[project]
name = "dagster-modal"
version = "0.1.2"
description = "Dagster integration with Modal"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dagster-pipes>=1.7.0",
    "dagster>=1.7.0",
    "modal>=0.64.163",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.8",
    "pytest",
]
