[project]
name = "dagster-notdiamond"
description = "Dagster integration with Not Diamond"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.8.0",
    "notdiamond",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "dagster-openai",
    "ruff",
    "pytest",
    "dagster-webserver",
    "pyright>=1.1.386",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_notdiamond"]

[tool.setuptools.dynamic]
version = {attr = "dagster_notdiamond.__version__"}
