[project]
name = "dagster-obstore"
description = "Dagster integration with `obstore` a python binding to Rust object-store crate. Integration provides computeLogManagers for S3, ADLS & GCS and ObjectStore resourecs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.9.11",
    "obstore>=0.6.0",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "pyright==1.1.386",
    "moto[s3]>=5.0.28",
    "azure-storage-blob>=12.24.1",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "podman-compose>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "dagster_obstore/__init__.py"

[tool.pyright]
typeCheckingMode = 'basic'
reportUnknownMemberType   = false
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "dagster_obstore_tests"
]
reportMissingImports = false
pythonVersion =  "3.11"
