[project]
name = "dagster-polars"
authors = [
    {name = "Daniel Gafni", email = "danielgafni16@gmail.com"},
]
description = "Dagster integration library for Polars"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dagster",
    "polars>=0.20.0",
    "pyarrow>=8.0.0",
    "typing-extensions>=4.7.0",
    "universal-pathlib>=0.1.4",
]
dynamic = ["version"]

[project.optional-dependencies]
deltalake = ["deltalake>=0.25.0"]
gcp = ["dagster-gcp>=0.19.5"]
patito = [
    "patito>=0.8.3",
]

[project.urls]
Repository = "https://github.com/dagster-io/community-integrations/tree/main/libraries/dagster-polars"

[tool.uv]
dev-dependencies = [
    "deepdiff>=6.3.0",
    "hypothesis[zoneinfo]>=6.89.0",
    "ruff",
    "polars>=1.24.0",
    "pytest>=8",
    "pytest-cases>=3.6.14",
    "pytest-mock",
    "pyright>=1.1.386",
]

[build-system]
requires = ["setuptools>=42", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_polars"]

[tool.setuptools.package-data]
dagster_polars = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "dagster_polars.version.__version__"}

[tool.pyright]
include = ["dagster_polars"]
reportPrivateImportUsage = false
