[project]
name = "dagster-teradata"
version = "0.0.1"
description = "<insert description here>"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dagster>=1.8.0",
    "teradatasql",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "pyright>=1.1.386",
]

[project.optional-dependencies]
azure = ["dagster-azure"]
aws = [
  "boto3",
  "dagster-aws",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_teradata"]
