[project]
name = "dagster-teradata"
description = "<insert description here>"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dagster>=1.8.0",
    "teradatasql",
    "paramiko",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "pyright>=1.1.386",
]

[project.optional-dependencies]
azure = ["dagster-azure"]
aws = [
  "boto3",
  "dagster-aws",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "dagster_teradata",
    "dagster_teradata.ttu",
    "dagster_teradata.ttu.utils"
]

[tool.setuptools.dynamic]
version = {attr = "dagster_teradata.__version__"}
